@@ -1,2 +1,0 @@
-15 add manual test for AtExit class (?).
-14 add mutexing to AtExit to make it thread-safe (update class description).
