@@ -1,3 +1,4 @@
+* AtExit is thread safe now.
 * updated build_process to v0.5.6.
 * added AtExit class - an OO replacement of limited atexit() system call.
 * added 2nd license: revised BSD.
